// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreen component fetches user data correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexBasis": 0,
      "flexGrow": 1,
      "flexShrink": 1,
      "justifyContent": "space-evenly",
    }
  }
>
  <Image
    source={1}
    style={
      {
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  />
  <SvgMock />
  <View
    style={
      {
        "position": "absolute",
        "top": "50%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#818181",
          "fontSize": 11,
          "marginBottom": 24,
          "textAlign": "center",
        }
      }
    >
      You’re loggen in now 
    </Text>
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 18,
          "fontWeight": "bold",
          "marginBottom": 20,
          "textAlign": "center",
        }
      }
    >
      John Doe
        username:
      johndoe
    </Text>
    <Text
      style={
        {
          "color": "#818181",
          "fontSize": 11,
          "marginBottom": 24,
          "textAlign": "center",
        }
      }
    >
      Email: 
      john@example.com
    </Text>
    <Text
      style={
        {
          "color": "#818181",
          "fontSize": 11,
          "marginBottom": 24,
          "textAlign": "center",
        }
      }
    >
      Phone: 
      123-456-7890
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#EB0057",
        "borderBottomLeftRadius": 5,
        "borderBottomRightRadius": 5,
        "borderTopLeftRadius": 5,
        "borderTopRightRadius": 5,
        "elevation": 5,
        "marginBottom": 50,
        "opacity": 1,
        "paddingBottom": 15,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 15,
        "shadowColor": "#EB0057",
        "shadowOffset": {
          "height": 12,
          "width": 0,
        },
        "shadowOpacity": 0.58,
        "shadowRadius": 16,
        "width": "80%",
      }
    }
    testID="logoutButton"
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 12,
          "textAlign": "center",
        }
      }
    >
      Log Out
    </Text>
  </View>
</View>
`;

exports[`HomeScreen component matches snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexBasis": 0,
      "flexGrow": 1,
      "flexShrink": 1,
      "justifyContent": "space-evenly",
    }
  }
>
  <Image
    source={1}
    style={
      {
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  />
  <SvgMock />
  <Text>
    Завантаження...
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#EB0057",
        "borderBottomLeftRadius": 5,
        "borderBottomRightRadius": 5,
        "borderTopLeftRadius": 5,
        "borderTopRightRadius": 5,
        "elevation": 5,
        "marginBottom": 50,
        "opacity": 1,
        "paddingBottom": 15,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 15,
        "shadowColor": "#EB0057",
        "shadowOffset": {
          "height": 12,
          "width": 0,
        },
        "shadowOpacity": 0.58,
        "shadowRadius": 16,
        "width": "80%",
      }
    }
    testID="logoutButton"
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 12,
          "textAlign": "center",
        }
      }
    >
      Log Out
    </Text>
  </View>
</View>
`;
